--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <img src="images/Carl Alejandro Headshot Square.JPG" alt="Profile Picture" class="profile-pic">
                 <div class="profile-info">
                 <h1>Carl Alejandro</h1>
-                <p class="subtitle">Students at the Rutgers Business School in New Brunswick, New Jersey. Majoring in Business Analytics and IT with an expected graduation date of May, 2025</p>
+                <p class="subtitle">Student at the Rutgers Business School in New Brunswick, New Jersey. Majoring in Business Analytics and IT with an expected graduation date of May, 2025</p>
                 <nav class="sociallinks">
                     <a href="https://www.linkedin.com/in/carlalejandro">LinkedIn</a>
                     <a href="https://app.joinhandshake.com/profiles/33328136">Handshake</a>
